...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/no_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/without_login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/enter_gmail_address"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/enter_gmail_address"
        android:layout_width="235dp"
...
        android:hint="@string/enter_gmail_address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_login_btn"
        app:layout_constraintBottom_toTopOf="@+id/enter_password"/>

    <EditText
        android:id="@+id/enter_password"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_gmail_address"
        app:layout_constraintBottom_toTopOf="@+id/enter_username"/>

    <EditText
        android:id="@+id/enter_username"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
...
    <TextView
        android:id="@+id/tv_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height_prompt"
        app:layout_constraintTop_toTopOf="@id/enter_username"
        app:layout_constraintBottom_toTopOf="@+id/btn_height_finish"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/et_height_feet"/>

    <EditText
        android:id="@+id/et_height_feet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feet_units"
        app:layout_constraintTop_toBottomOf="@id/enter_username"
        app:layout_constraintBottom_toTopOf="@+id/btn_height_finish"
        app:layout_constraintLeft_toRightOf="@+id/et_height_feet"
        app:layout_constraintRight_toLeftOf="@+id/et_height_remainder_inches"/>

    <EditText
        android:id="@+id/et_height_remainder_inches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
...
    <Button
        android:id="@+id/btn_height_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@+id/tv_prompt"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/sign_up_tv"
        android:layout_width="wrap_content"
...
