...

    <!--    In activity_login.xml -->
    <string name="height_prompt">Please enter your height:</string>
    <string name="num_hint">0</string>
    <string name="feet_units">ft</string>
    <string name="inch_units">in</string>
    <string name="without_login">Continue without login</string>
    <string name="with_login">Go back to login</string>
    <string name="enter_gmail_address">Enter gmail address</string>
    <string name="enter_password">Enter unique password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_name">Enter name</string>
    <string name="sign_up_tv">Don\'t have an account? Sign up here</string>
    <string name="login_tv">Already have an account? Log in here</string>

    <!--    In activity_home.xml-->
    <string name="daily_steps">Daily Steps</string>
...
    <string name="btn_accept_team_invitation">Accept</string>
    <string name="btn_decline_team_invitation">Decline</string>
    <string name="text_invitation_not_exist">You don\'t have any pending invitations.</string>


    <!--    In both activity_loginxml and activity_mock.xml-->
    <string name="finish_btn_text">Finish</string>

    <!--    In both activity_home.xml and activity_route_details.xml-->
    <string name="total_steps_prompt">Total Steps: </string>
    <string name="total_distance">Total Distance: </string>
    <string name="time_elapsed">Time Elapsed: </string>
    <string name="start_walk">Start Walk</string>
...
