...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_daily_steps_prompt"
        app:layout_constraintBottom_toTopOf="@id/tv_daily_distance_prompt"/>

    <TextView
        android:id="@+id/tv_daily_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/home_txt_size"
        android:text=""
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_daily_distance_prompt"
        app:layout_constraintBottom_toTopOf="@id/btn_start_walk"/>

    <TextView
        android:id="@+id/tv_daily_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/home_txt_size"
        android:text=""
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
...
